package edu.fiuba.algo3.modelo.pregunta;

public enum EstadoRonda {
    INICIA,
    RESPONDIENDO,
    FIN_RONDA
}
