@startuml
!include vista.iuml
title Modelo General del Juego

class Jugador{
    - puntos: int
    - nombre: string

    + obtenerNombre():string
    + obtenerPuntaje():int
    + sumarPuntos():void
}

interface Preguntable{
    + obtenerOpciones():List
    + obtenerPregunta():str
    + obtenerTipoPregunta():TipoPregunta
    + establecerPuntuacion(opciones: T, multiplicador: MultiplicableStrategy, exclusividad: Exclusividad): int
}

class Partida {
    - preguntasIterator: Iterator<Preguntable>
    - exclusividadPorJugador: Map<Jugador, Integer>
    + obtenerPreguntaTurno(): Preguntable
    + obtenerJugadorTurno(): Jugador
    + obtenerJugadores(): List<Jugador>
    + responder(opcionesSeleccionadas: T, multiplicador: MultiplicableStrategy, aplicaExclusividad: Boolean)
    - generarJugadores(nombresJugadores: List<String>): List<Jugador>
    - establecerExclusividadPorJugador()
    - esPartidaFinalizada(): Boolean
    - actualizarTurno()
}

class Ronda{
    - jugadorIterator: Iterator<Jugador>
    - jugadorTurno: Jugador
    - puntajesRonda Map<Jugador, Integer>
    - aplicanExclusividad: List<Jugador>
    - estadoRonda: EstadoRonda
    - exclusividad: Exclusividad
    + restablecerRonda(pregunta: Preguntable)
    + obtenerJugadores(): List<Jugador>
    + obtenerPregunta(): Preguntable
    + obtenerJugadorTurno(): Jugador
    + responder(opciones: List<Opcion>, multiplicador: MultiplicableStrategy, aplicaExclusividad: Boolean):void
    + esRondaFinalizada(): Boolean
    - validarRonda(jugadores: List<Jugador>, pregunta: Preguntable)
    - actualizarTurno()
    - actualizarEstadoRonda()
    - cambiarJugadorTurno()
    - aplicarPuntajes()
}

enum EstadoRonda{
    INICIA
    RESPONDIENDO
    FIN_RONDA
}

class ControladorPanel{
    - contador: int
    - pantallaPrincipal: PantallaPrincipal
    - partida: Partida
    - jugar()
    - responder()
    - establecerTurno()
    - countdown()
    - reestablecerTemporizador()
}

interface ActionListener{
    + actionPerformed(e: ActionEvent)
}

ActionListener <|.. ControladorPanel
ControladorPanel o--> Partida
Partida o--> Ronda
Partida "1" o-right->"*" Preguntable
Partida "1" o--> "*" Jugador
Ronda "1" o-up->"1" Preguntable
Ronda "1" o-left->"*"Jugador
Ronda "1" o--> "1" EstadoRonda


@enduml